test_suite/alan-2022-examples/failing/006700_mutation.alan
source d begin leave put "\n" U4 end
